<resources>
    <string name="app_name">Work Table</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="spot_lights">Spot Lights</string>
    <string name="bar_light">Bar Light</string>
    <string name="laptop_sockets">Laptop</string>
    <string name="table_sockets">Table Sockets</string>
    <string name="power_12">12 V</string>
    <string name="power_18">18 V</string>
    <string name="power_24">24 V</string>
    <string name="usb">USB</string>
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
</resources>
